PyMaker/datas/object2/RawHTML/i2901/Python_DOC_referPages.type-hints-syntax-error-on-python-3-5.txt
<div class="post-text" itemprop="text">
<div class="question-status question-originals-of-duplicate">
<p>This question already has an answer here:</p>
<ul>
<li>
<a dir="ltr" href="/questions/42002596/python-3-5-typed-namedtuple-syntax-produces-syntaxerror">Python 3.5 typed NamedTuple syntax produces SyntaxError</a>
<span class="question-originals-answer-count">
                    1 answer
                </span>
</li>
</ul>
</div>
<p>I've got a code base that I recently sprinkled liberally with type hints. It is python 3.5+ exclusively and the python 3.5 changelog claims type hinting is supported. Unfortunately all the hints raise syntax errors, likewise with simple hints in the interpreter:</p>
<pre><code>$ python3
Python 3.5.2 (default, Nov 23 2017, 16:37:01) 
&gt;&gt;&gt; a: int = 5
  File "&lt;stdin&gt;", line 1
    a: int = 5
     ^
SyntaxError: invalid syntax
</code></pre>
<p>Any ideas?</p>
</div>
<div class="post-text" itemprop="text">
<p>That's an example of a variable annotation, which wasn't introduced until Python 3.6. A variable annotation, defined by <a href="https://www.python.org/dev/peps/pep-0526/" rel="nofollow noreferrer">PEP-526</a>, is distinct from a function annotation. Type hints are just one possible use for either type of annotation.</p>
</div>
<span class="comment-copy">You need a later version for type hints on values and attributes, rather than parameters: <a href="https://docs.python.org/3/whatsnew/3.6.html#pep-526-syntax-for-variable-annotations" rel="nofollow noreferrer">docs.python.org/3/whatsnew/…</a>.</span>
<span class="comment-copy">Ah thanks. I feel stupid now.</span>
